Add Vault Support #2

--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -5,5 +5,8 @@
 dependencies {
 
     compileOnly("org.spigotmc:spigot-api:${versions_spigot}")
+// https://mvnrepository.com/artifact/net.milkbowl.vault/VaultAPI
+    compileOnly group: 'net.milkbowl.vault', name: 'VaultAPI', version: '1.6'
+
 
 }
