Fixed many bug (not free of bugs)

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ version: @version@
 main: @group@.@lowerName@.@name@
 author: Lars Artmann aka. LartyHD
 website: CraftPlugin.net
+depend:
+  - DarkFrame
