Added Stats (FUCKING AWESOME) an fixed some bugs

--- a/build.gradle
+++ b/build.gradle
@@ -54,14 +54,17 @@ subprojects {
 
         compileOnly(fileTree(libsDirName))
 
+
         compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
         compileOnly "org.jetbrains.kotlin:kotlin-reflect"
         compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
 
-        testCompileOnly "org.jetbrains.kotlin:kotlin-test"
-        testCompileOnly "org.jetbrains.kotlin:kotlin-test-junit5"
-        testCompileOnly "org.mockito:mockito-all:2.0.2-beta"
-        testCompileOnly "org.junit.jupiter:junit-jupiter-api:5.3.1"
+        testCompile "org.jetbrains.kotlin:kotlin-test"
+        testCompile "org.jetbrains.kotlin:kotlin-test-junit"
+        testCompile group: 'junit', name: 'junit', version: '4.13-beta-2'
+//        testCompileOnly "org.junit.jupiter:junit-jupiter-api:5.3.1"
+        testCompile "com.github.nhaarman:mockito-kotlin:2.1.0"
+        testCompile 'io.mockk:mockk:1.9'
 
     }
 
