--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,12 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-serialization:${kotlinVersion}")
     }
 }
 
@@ -20,6 +22,7 @@ subprojects {
 
     apply plugin: 'java'
     apply plugin: 'kotlin'
+    apply plugin: 'kotlinx-serialization'
     apply plugin: 'idea'
 
     group = pluginGroup
@@ -43,6 +46,8 @@ subprojects {
         maven { url = ("https://repo.velocitypowered.com/snapshots/") }
         maven { url = ("http://repo.spongepowered.org/maven") }
         maven { url = ("https://jitpack.io") }
+        // artifacts are published to this repository
+        maven { url "https://kotlin.bintray.com/kotlinx" }
     }
 
     configurations {
@@ -53,6 +58,8 @@ subprojects {
     dependencies {
 
         compileOnly(fileTree(libsDirName))
+
+        jarLibs 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0'
 
         compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
         compileOnly "org.jetbrains.kotlin:kotlin-reflect"
