--- a/build.gradle
+++ b/build.gradle
@@ -59,11 +59,10 @@ subprojects {
 
         compileOnly(fileTree(libsDirName))
 
-        jarLibs 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0'
-
         compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
         compileOnly "org.jetbrains.kotlin:kotlin-reflect"
         compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+        compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0"
 
         testCompile "org.jetbrains.kotlin:kotlin-test"
         testCompile "org.jetbrains.kotlin:kotlin-test-junit"
