--- a/build.gradle
+++ b/build.gradle
@@ -63,11 +63,11 @@ subprojects {
         compileOnly "org.jetbrains.kotlin:kotlin-reflect"
         compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
         compile "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0"
+        jarLibs 'com.rollbar:rollbar-java:1.+'
 
         testCompile "org.jetbrains.kotlin:kotlin-test"
         testCompile "org.jetbrains.kotlin:kotlin-test-junit"
         testCompile group: 'junit', name: 'junit', version: '4.13-beta-2'
-//        testCompileOnly "org.junit.jupiter:junit-jupiter-api:5.3.1"
         testCompile "com.github.nhaarman:mockito-kotlin:2.1.0"
         testCompile 'io.mockk:mockk:1.9'
 
@@ -80,10 +80,14 @@ subprojects {
     }
 
     processResources {
+        from(sourceSets.main.kotlin.srcDirs) {
+            filter ReplaceTokens, tokens: [version: version, group: pluginGroup, name: rootProject.name, lowerName: rootProject.name.toLowerCase()]
+        }
         from(sourceSets.main.resources.srcDirs) {
             filter ReplaceTokens, tokens: [version: version, group: pluginGroup, name: rootProject.name, lowerName: rootProject.name.toLowerCase()]
-//            filter ReplaceTokens, tokens: [group: group]
-//            filter ReplaceTokens, tokens: [name: name]
+        }
+        from(sourceSets.main.allJava.srcDirs) {
+            filter ReplaceTokens, tokens: [version: version, group: pluginGroup, name: rootProject.name, lowerName: rootProject.name.toLowerCase()]
         }
     }
 
