--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -2,6 +2,10 @@ name: @name@
 version: @version@
 main: @group@.@lowerName@.@name@
 author: Lars Artmann aka. LartyHD
-website: CraftPlugin.net
+website: lars.software
 depend:
   - DarkFrame
+  - Vault
+softdepend:
+  - Vault
+  - PlaceholderAPI
