--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -11,6 +11,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.6.10'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
     id 'org.jetbrains.kotlin.plugin.allopen' version "1.6.10"
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
     id 'idea'
     id 'java'
 }
@@ -18,15 +19,12 @@ plugins {
 group = pluginGroup as Object
 version = pluginVersion as Object
 
-libsDirName = "libraries"
-
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
     google()
-    //maven { url = ("https://hub.spigotmc.org/nexus/content/groups/public/") }
     maven { url = ("https://hub.spigotmc.org/nexus/content/repositories/snapshots/") }
     maven { url = ("https://oss.sonatype.org/content/groups/public/") }
     maven { url = ("https://oss.sonatype.org/content/repositories/snapshots/") }
@@ -36,26 +34,20 @@ repositories {
     maven { url = ("https://maven.addstar.com.au/artifactory/all-release/") }
 }
 
-configurations {
-    // configuration that holds jars to include in the jar
-    api.extendsFrom jarLib
-}
-
 dependencies {
 
     api("org.spigotmc:spigot-api:${versions_spigot}")
     //testCompile("org.spigotmc:spigot-api:${versions_spigot}")
     api("com.github.AstrideUG.DarkBedrock:Darkness-Spigot:7e5c48f869")
     api("me.clip:placeholderapi:2.10.10")
-    implementation "net.kyori:adventure-platform-bukkit:4.0.0"
+    implementation 'net.kyori:adventure-platform-bukkit:4.0.1'
     api("com.github.milkbowl:VaultAPI:1.7.1")
 
-    api("org.jetbrains.kotlin:kotlin-stdlib:1.6.10")
-    api("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
-    api('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2')
-
-    jarLib("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1")
-    jarLib("com.rollbar:rollbar-java:1.7.10")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0')
+    implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2')
+    implementation('com.rollbar:rollbar-java:1.8.1')
 
     /*testCompile("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1")
     testCompile "org.jetbrains.kotlin:kotlin-test"
@@ -64,13 +56,6 @@ dependencies {
     testCompile "com.github.nhaarman:mockito-kotlin:2.1.0"
     testCompile 'io.mockk:mockk:1.9'
 */
-}
-
-jar {
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    from {
-        configurations.jarLib.collect { it.isDirectory() ? it : zipTree(it) }
-    }
 }
 
 processResources {
@@ -111,3 +96,21 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     }
 }
 
+
+shadowJar {
+    archiveFileName = "GunGame-Spigot-"+version+"-all.jar"
+
+    dependencies {
+        include(dependency('de.astride:.*'))
+        include(dependency('org.jetbrains.kotlin:.*'))
+        include(dependency('org.jetbrains.kotlinx:.*'))
+        include(dependency('com.rollbar:.*'))
+    }
+
+    //relocate 'kotlin', 'de.astride.gungame.lib.kotlin'
+    relocate 'kotlinx', 'de.astride.gungame.lib.kotlinx'
+}
+
+artifacts {
+    archives shadowJar
+}
